# RoPet_ESPS3_AI_EYE

./: .gitignore
.github/workflows/: build-firmware.yml
c5_wifi_bridge/: CMakeLists.txt  INTEGRATION_CHECKLIST.md  README.md  _read_c5.py  _read_s3.py  _read_serial.py  bridge_protocol.h  partitions.csv  sdkconfig.defaults
c5_wifi_bridge/main/: CMakeLists.txt  bridge_internal.h  bridge_sock.c  bridge_uart.c  bridge_wifi.c  bridge_wifi.cc  idf_component.yml  main.c
components/78__esp-opus-encoder/: CMakeLists.txt
components/c5_bridge/: CMakeLists.txt  c5_bridge.cc  c5_http.cc  c5_mqtt.cc  c5_transport.cc  c5_udp.cc
components/c5_bridge/include/: bridge_protocol.h  c5_bridge.h  c5_http.h  c5_mqtt.h  c5_transport.h  c5_udp.h
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  mcp_server.cc
main/assets/common/: 4G_MODE.p3  Neting.p3  WIFI_MODE.p3  aec_no.p3  aec_off.p3  bat_low.p3
main/boards/common/: axp2101.cc  axp2101.h  board.cc  board.h  dual_network_board.cc  dual_network_board.h  esp32c5_board.cc  esp32c5_board.h
main/boards/doit-esp32s3-eye-8311/: config.h  doit-esp32s3-eye-8311.cc
main/boards/zhengchen-1.54tft-wifi/: power_manager.h
main/display/: display.cc  display.h
main/led/: single_led.cc  single_led.h
scripts/flasher/: README.md  flash_gui.py  requirements.txt
